--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </div>
           <div class="table__cell">
             <h4 class="table__heading">2.1 миллиарда</h4>
-            <p class="table__text">Число нуждающихся в повышении квалификации <p class="table__text">Всемирный Банк, 2017</p>
+            <p class="table__text">Число нуждающихся в повышении квалификации <p class="table__text">Всемирный Банк, 2017</p></p>
           </div>
           <div class="table__cell">
             <h4 class="table__heading">1000 терабайт</h4>
@@ -63,7 +63,7 @@
           </div>
           <div class="table__cell">
             <h4 class="table__heading">420 миллионов</h4>
-            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства <p class="table__text">Всемирный Банк, 2017</p>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства <p class="table__text">Всемирный Банк, 2017</p></p>
           </div>
           <div class="table__cell">
             <h4 class="table__heading">17–20 лет</h4>
