--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       к обучению вы можете использовать в своей жизни?
       <a href="#" class="header__link">Узнать→</a>
     </p>
-      <img class="header__main-illustration" src="./images/header-image.png" alt="image">
+      <img class="header__main-illustration" src="./images/header-image.png" alt="Картинка">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
@@ -155,11 +155,11 @@
         <h3 class="footer__column-heading">Соцсети</h3>
         <ul class="footer__column-links">
           <li><a href="https://www.facebook.com/" target="_blank">
-            <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Facebook">Facebook</a></li> 
+            <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Facebook">Фейсбук</a></li> 
           <li><a href="https://vk.com/" target="_blank">
             <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Вконтакте">ВКонтакте</a></li>
           <li><a href="https://www.instagram.com/" target="_blank">
-             <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Instagram">Instagram</a></li>
+             <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Instagram">Инстаграм</a></li>
         </ul>
       </div>
       </div>
