--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
         <h3 class="footer__column-heading">Соцсети</h3>
         <ul class="footer__column-links">
           <li><a href="https://www.facebook.com/" target="_blank">
-            <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Facebook">Фейсбук</a></li> 
+            <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Фейсбук">Facebook</a></li> 
           <li><a href="https://vk.com/" target="_blank">
             <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Вконтакте">ВКонтакте</a></li>
           <li><a href="https://www.instagram.com/" target="_blank">
-             <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Instagram">Инстаграм</a></li>
+             <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Инстаграм">Instagram</a></li>
         </ul>
       </div>
       </div>
