--- a/index.html
+++ b/index.html
@@ -139,19 +139,19 @@
       <div class="footer__column footer__column_content_info">
         <h3 class="footer__column-heading">О Практикуме</h3>
         <ul class="footer__column-links">
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">Концепция</a></li>
-          <li><a href="#">Наставники</a></li>
+          <li><a href="#" class="footer__column-link">Главная</a></li>
+          <li><a href="#" class="footer__column-link">Концепция</a></li>
+          <li><a href="#" class="footer__column-link">Наставники</a></li>
         </ul>
       </div>
       <div class="footer__column footer__column_content_social">
         <h3 class="footer__column-heading">Соцсети</h3>
         <ul class="footer__column-links">
-          <li><a href="https://www.facebook.com/" target="_blank">
+          <li><a href="https://www.facebook.com/" target="_blank" class="footer__column-link">
             <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Фейсбук">Facebook</a></li> 
-          <li><a href="https://vk.com/" target="_blank">
+          <li><a href="https://vk.com/" target="_blank" class="footer__column-link">
             <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Вконтакте">ВКонтакте</a></li>
-          <li><a href="https://www.instagram.com/" target="_blank">
+          <li><a href="https://www.instagram.com/" target="_blank" class="footer__column-link">
              <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Инстаграм">Instagram</a></li>
         </ul>
       </div>
