--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
 </head>
-<body>
+<body class="root">
   <div class="page">
     <header class="header">
       <div class="logo logo_place_header"></div>
      <h1 class="header__title">Научиться учиться</h1>
     <p class="header__subtitle">Какие современные и эффективные подходы 
       к обучению вы можете использовать в своей жизни?
-      <a href="#" class="header__link">Узнать→</a>
+      <a href="#" class="link header__link">Узнать→</a>
     </p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Картинка">
       <div class="header__square-pic"></div>
@@ -93,7 +92,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-        <a href="#" class="feynman__link">Подробнее →</a>
+        <a href="#" class="link feynman__link">Подробнее →</a>
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
@@ -146,7 +145,7 @@
             <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
             <div class="khan__book-container">
               <img class="khan__book-pic" src="./images_sprint-2/khan-book.jpg" alt="">
-              <a href="#" class="khan__buy-link">Купить книгу→</a>
+              <a href="#" class="link khan__buy-link">Купить книгу→</a>
             </div>
         </div>
       </section>
@@ -202,14 +201,14 @@
         <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
         <div class="resources__logo-zone">
           <ul class="resources__link">
-            <li><a href="#" target="_blank" class="resources__logo">
-              <img src="./images_sprint-2/logo/resources-arzamas.svg" alt=""></a></li> 
-            <li><a href="#" target="_blank" class="resources__logo">
-              <img src="./images_sprint-2/logo/resources-n1.svg" alt=""></a></li> 
-            <li><a href="#" target="_blank" class="resources__logo">
-              <img src="./images_sprint-2/logo/resources-strelka.svg" alt=""></a></li> 
-            <li><a href="#" target="_blank" class="resources__logo">
-              <img src="./images_sprint-2/logo/resources-polka.svg" alt=""></a></li> 
+            <li><a href="#" target="_blank" class="link">
+              <img class="resources__logo" src="./images_sprint-2/logo/resources-arzamas.svg" alt=""></a></li> 
+            <li><a href="#" target="_blank" class="link">
+              <img class="resources__logo" src="./images_sprint-2/logo/resources-n1.svg" alt=""></a></li> 
+            <li><a href="#" target="_blank" class="link">
+              <img class="resources__logo" src="./images_sprint-2/logo/resources-strelka.svg" alt=""></a></li> 
+            <li><a href="#" target="_blank" class="link">
+              <img class="resources__logo" src="./images_sprint-2/logo/resources-polka.svg" alt=""></a></li> 
           </ul>
         </div>
       </section>
@@ -223,19 +222,19 @@
       <div class="footer__column footer__column_content_info">
         <h3 class="footer__column-heading">О Практикуме</h3>
         <ul class="footer__column-links">
-          <li><a href="#" class="footer__column-link">Главная</a></li>
-          <li><a href="#" class="footer__column-link">Концепция</a></li>
-          <li><a href="#" class="footer__column-link">Наставники</a></li>
+          <li><a href="#" class="link footer__column-link">Главная</a></li>
+          <li><a href="#" class="link footer__column-link">Концепция</a></li>
+          <li><a href="#" class="link footer__column-link">Наставники</a></li>
         </ul>
       </div>
       <div class="footer__column footer__column_content_social">
         <h3 class="footer__column-heading">Соцсети</h3>
         <ul class="footer__column-links">
-          <li><a href="https://www.facebook.com/" target="_blank" class="footer__column-link">
+          <li><a href="https://www.facebook.com/" target="_blank" class="link footer__column-link">
             <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Фейсбук">Facebook</a></li> 
-          <li><a href="https://vk.com/" target="_blank" class="footer__column-link">
+          <li><a href="https://vk.com/" target="_blank" class="link footer__column-link">
             <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Вконтакте">ВКонтакте</a></li>
-          <li><a href="https://www.instagram.com/" target="_blank" class="footer__column-link">
+          <li><a href="https://www.instagram.com/" target="_blank" class="link footer__column-link">
              <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Инстаграм">Instagram</a></li>
         </ul>
       </div>
