--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
 </head>
-<body class="root">
+<body>
   <div class="page">
     <header class="header">
       <div class="logo logo_place_header"></div>
@@ -15,7 +15,7 @@
       к обучению вы можете использовать в своей жизни?
       <a href="#" class="link header__link">Узнать→</a>
     </p>
-      <img class="header__main-illustration" src="./images/header-image.png" alt="Картинка">
+      <img class="header__main-illustration" src="./images/header/header-image.png" alt="Картинка">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
@@ -41,27 +41,27 @@
         <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
         <ul class="cards">
           <li class="cards__item">
-            <img class="cards__image" src="./images_sprint-2/cards-attention.png" alt="">
+            <img class="cards__image" src="./images/cards/cards-attention.png" alt="Картинка">
             <h4 class="cards__title">Два вида внимания</h4>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images_sprint-2/cards-recall.png" alt="">
+            <img class="cards__image" src="./images/cards/cards-recall.png" alt="Картинка">
             <h4 class="cards__title">Recall</h4>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images_sprint-2/cards-interliving.png" alt="">
+            <img class="cards__image" src="./images/cards/cards-interliving.png" alt="Картинка">
             <h4 class="cards__title">Интерливинг</h4>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images_sprint-2/cards-question.png" alt="">
+            <img class="cards__image" src="./images/cards/cards-question.png" alt="Картинка">
             <h4 class="cards__title">Вопросы</h4>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images_sprint-2/cards-competence.png" alt="">
+            <img class="cards__image" src="./images/cards/cards-competence.png" alt="Картинка">
             <h4 class="cards__title">Иллюзия компетентности</h4>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </li>
@@ -144,7 +144,7 @@
             <h4 class="khan__quote-author">Джордж Лукас</h4>
             <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
             <div class="khan__book-container">
-              <img class="khan__book-pic" src="./images_sprint-2/khan-book.jpg" alt="">
+              <img class="khan__book-pic" src="./images/khan/khan-book.jpg" alt="Картинка">
               <a href="#" class="link khan__buy-link">Купить книгу→</a>
             </div>
         </div>
@@ -202,13 +202,13 @@
         <div class="resources__logo-zone">
           <ul class="resources__link">
             <li><a href="#" target="_blank" class="link">
-              <img class="resources__logo" src="./images_sprint-2/logo/resources-arzamas.svg" alt=""></a></li> 
+              <img class="resources__logo" src="./images/resources/resources-arzamas.svg" alt="Картинка"></a></li> 
             <li><a href="#" target="_blank" class="link">
-              <img class="resources__logo" src="./images_sprint-2/logo/resources-n1.svg" alt=""></a></li> 
+              <img class="resources__logo" src="./images/resources/resources-n1.svg" alt="Картинка"></a></li> 
             <li><a href="#" target="_blank" class="link">
-              <img class="resources__logo" src="./images_sprint-2/logo/resources-strelka.svg" alt=""></a></li> 
+              <img class="resources__logo" src="./images/resources/resources-strelka.svg" alt="Картинка"></a></li> 
             <li><a href="#" target="_blank" class="link">
-              <img class="resources__logo" src="./images_sprint-2/logo/resources-polka.svg" alt=""></a></li> 
+              <img class="resources__logo" src="./images/resources/resources-polka.svg" alt="Картинка"></a></li> 
           </ul>
         </div>
       </section>
@@ -217,7 +217,7 @@
       <div class="footer__columns">
       <div class="footer__column footer__column_content_copyright">
         <div class="logo logo_place_footer"></div>
-        <p class="footer__author">&copy;2022.Людмила Лупандина</p>
+        <p class="footer__author">&copy;Людмила Лупандина</p>
       </div>
       <div class="footer__column footer__column_content_info">
         <h3 class="footer__column-heading">О Практикуме</h3>
@@ -231,11 +231,11 @@
         <h3 class="footer__column-heading">Соцсети</h3>
         <ul class="footer__column-links">
           <li><a href="https://www.facebook.com/" target="_blank" class="link footer__column-link">
-            <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Фейсбук">Facebook</a></li> 
+            <img class="footer__social-icon" src="./images/footer/facebook_color_white.svg" alt="Фейсбук">Facebook</a></li> 
           <li><a href="https://vk.com/" target="_blank" class="link footer__column-link">
-            <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Вконтакте">ВКонтакте</a></li>
+            <img class="footer__social-icon" src="./images/footer/vk_color_white.svg" alt="Вконтакте">ВКонтакте</a></li>
           <li><a href="https://www.instagram.com/" target="_blank" class="link footer__column-link">
-             <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Инстаграм">Instagram</a></li>
+             <img class="footer__social-icon" src="./images/footer/instagram_color_white.svg" alt="Инстаграм">Instagram</a></li>
         </ul>
       </div>
       </div>
