--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
 </head>
-<body class="root">
+<body>
   <div class="page">
     <header class="header">
       <div class="logo logo_place_header"></div>
@@ -15,12 +15,12 @@
       к обучению вы можете использовать в своей жизни?
       <a href="#" class="link header__link">Узнать→</a>
     </p>
-      <img class="header__main-illustration" src="./images/header-image.png" alt="Картинка">
-      <div class="header__square-pic"></div>
+      <img class="header__main-illustration" src="./images/header/header-image.png" alt="Картинка">
+      <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
-      <section class="description">
-        <div class="two-columns">
+      <section class="description" aria-label="Секция со статьей">
+        <article class="two-columns">
         <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
         <div class="two-columns__main-text">
           <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. 
@@ -34,52 +34,51 @@
                сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
             </p>
           </div>
-        </div>
+        </article>
       </section>
       <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
-        <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
           <li class="cards__item">
-            <img class="cards__image" src="./images_sprint-2/cards-attention.png" alt="">
+            <img class="cards__image" src="./images/cards/cards-attention.png" alt="Картинка">
             <h4 class="cards__title">Два вида внимания</h4>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images_sprint-2/cards-recall.png" alt="">
+            <img class="cards__image" src="./images/cards/cards-recall.png" alt="Картинка">
             <h4 class="cards__title">Recall</h4>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images_sprint-2/cards-interliving.png" alt="">
+            <img class="cards__image" src="./images/cards/cards-interliving.png" alt="Картинка">
             <h4 class="cards__title">Интерливинг</h4>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images_sprint-2/cards-question.png" alt="">
+            <img class="cards__image" src="./images/cards/cards-question.png" alt="Картинка">
             <h4 class="cards__title">Вопросы</h4>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images_sprint-2/cards-competence.png" alt="">
+            <img class="cards__image" src="./images/cards/cards-competence.png" alt="Картинка">
             <h4 class="cards__title">Иллюзия компетентности</h4>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </li>
+        </ul>
       </section>
       <section class="video">
         <h2 class="section-title">Видео нa TED</h2>
         <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
         <div class="video__iframes">
-          <iframe class="video__iframe" width="560" height="315" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" 
-          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-        </iframe>
-          <iframe class="video__iframe" width="560" height="315" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" 
-          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY">
+       </iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU">
         </iframe>
         </div>
       </section>
-      <section class="oakley">
-        <div class="two-columns">
+      <section class="oakley" aria-label="Секция со статьей">
+        <article class="two-columns">
           <h3 class="two-columns__brief">История Барбары Оакли.</h3>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. 
@@ -87,7 +86,7 @@
               Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. 
               Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
             </div>
-          </div>
+          </article>
       </section>
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
@@ -136,21 +135,21 @@
       </section>
       <section class="khan">
         <div class="khan__container">
-          <h3 class="khan__author">Салман Хан</h3>
+          <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. 
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. 
             Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, 
-            которые приносят успех в школе, карьере и жизни.</p>
+            которые приносят успех в школе, карьере и жизни.</blockquote>
             <h4 class="khan__quote-author">Джордж Лукас</h4>
             <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
             <div class="khan__book-container">
-              <img class="khan__book-pic" src="./images_sprint-2/khan-book.jpg" alt="">
+              <img class="khan__book-pic" src="./images/khan/khan-book.jpg" alt="Картинка">
               <a href="#" class="link khan__buy-link">Купить книгу→</a>
             </div>
         </div>
       </section>
       <section class="kaufman">
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
         <ul class="table table_theme_dark">
@@ -202,13 +201,13 @@
         <div class="resources__logo-zone">
           <ul class="resources__link">
             <li><a href="#" target="_blank" class="link">
-              <img class="resources__logo" src="./images_sprint-2/logo/resources-arzamas.svg" alt=""></a></li> 
+              <img class="resources__logo" src="./images/resources/resources-arzamas.svg" alt="Картинка"></a></li> 
             <li><a href="#" target="_blank" class="link">
-              <img class="resources__logo" src="./images_sprint-2/logo/resources-n1.svg" alt=""></a></li> 
+              <img class="resources__logo" src="./images/resources/resources-n1.svg" alt="Картинка"></a></li> 
             <li><a href="#" target="_blank" class="link">
-              <img class="resources__logo" src="./images_sprint-2/logo/resources-strelka.svg" alt=""></a></li> 
+              <img class="resources__logo" src="./images/resources/resources-strelka.svg" alt="Картинка"></a></li> 
             <li><a href="#" target="_blank" class="link">
-              <img class="resources__logo" src="./images_sprint-2/logo/resources-polka.svg" alt=""></a></li> 
+              <img class="resources__logo" src="./images/resources/resources-polka.svg" alt="Картинка"></a></li> 
           </ul>
         </div>
       </section>
@@ -217,7 +216,7 @@
       <div class="footer__columns">
       <div class="footer__column footer__column_content_copyright">
         <div class="logo logo_place_footer"></div>
-        <p class="footer__author">&copy;2022.Людмила Лупандина</p>
+        <p class="footer__author">&copy; Людмила Лупандина</p>
       </div>
       <div class="footer__column footer__column_content_info">
         <h3 class="footer__column-heading">О Практикуме</h3>
@@ -231,15 +230,15 @@
         <h3 class="footer__column-heading">Соцсети</h3>
         <ul class="footer__column-links">
           <li><a href="https://www.facebook.com/" target="_blank" class="link footer__column-link">
-            <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Фейсбук">Facebook</a></li> 
+            <img class="footer__social-icon" src="./images/footer/facebook_color_white.svg" alt="Фейсбук">Facebook</a></li> 
           <li><a href="https://vk.com/" target="_blank" class="link footer__column-link">
-            <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Вконтакте">ВКонтакте</a></li>
+            <img class="footer__social-icon" src="./images/footer/vk_color_white.svg" alt="Вконтакте">ВКонтакте</a></li>
           <li><a href="https://www.instagram.com/" target="_blank" class="link footer__column-link">
-             <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Инстаграм">Instagram</a></li>
+             <img class="footer__social-icon" src="./images/footer/instagram_color_white.svg" alt="Инстаграм">Instagram</a></li>
         </ul>
       </div>
       </div>
     </footer>
   </div>
-</body>
+ </body>
 </html>
